--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -27,7 +27,7 @@
   background: #fafafa;
   border-radius: 2px;
   width: 200px;
-  color: #FAFAFA;
+  color: black;
   font-size: 12px;
 }
 
@@ -35,6 +35,32 @@
   margin: 0px 0px 20px 0px;
   display: flex;
 }
+
+.login-username-label, .login-password-label{
+  font-size: 12px;
+  color: gray;
+  position: absolute;
+  left: 10%;
+  top: 33.2%;
+  padding: 7px 0 0 13px;
+  transition: all 200ms;
+  opacity: .77;
+  z-index: 11;
+}
+
+.login-password-label {
+  top: 44.2%;
+}
+
+.login-input:focus + .login-username-label,
+.login-input:valid + .login-username-label,
+.login-input:focus + .login-password-label,
+.login-input:valid + .login-password-label{
+  font-size: 65%;
+  transform: translate3d(0, -45%, 0);
+  opacity: 1;
+}
+
 
 .session-submit {
   position: relative;
