Update splash page

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,5 +6,13 @@
 
 <% end %>
 
-
+<script>
+  window.images = ({
+    camera: "<%= asset_path('camera-retro-solid.svg') %>",
+    heart: "<%= asset_path('heartbeat-solid.svg') %>",
+    person: "<%= asset_path('user-alt-solid.svg') %>",
+    line: "<%= asset_path('grip-lines-vertical-solid.svg') %>",
+    compass: "<%= asset_path('compass-regular.svg') %>"
+  })
+</script>
 <main id="root"></main>
