--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -12,7 +12,8 @@
     heart: "<%= asset_path('heartbeat-solid.svg') %>",
     person: "<%= asset_path('user-alt-solid.svg') %>",
     line: "<%= asset_path('grip-lines-vertical-solid.svg') %>",
-    compass: "<%= asset_path('compass-regular.svg') %>"
+    compass: "<%= asset_path('compass-regular.svg') %>",
+    chuck: "<%= asset_path('CHUCK.jpg') %>",
   })
 </script>
 <main id="root"></main>
