--- a/app/assets/stylesheets/api/00-reset.css
+++ b/app/assets/stylesheets/api/00-reset.css
@@ -11,6 +11,7 @@ span, article, footer, time, small {
   outline: 0;
   font: inherit;
   font-family: 'Roboto', sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   font-size: 12;
   color: inherit;
   text-align: inherit;
@@ -35,7 +36,7 @@ input[type="email"],
 input[type="text"],
 input[type="submit"],
 textarea,
-button {
+{
   /*
   Get rid of native styling. Read more here:
   http://css-tricks.com/almanac/properties/a/appearance/
