--- a/app/assets/stylesheets/splash_page/splash.scss
+++ b/app/assets/stylesheets/splash_page/splash.scss
@@ -1,26 +1,44 @@
-.splash-background-div {
+.splash-body {
   display: flex;
   justify-content: center;
+  margin-left: 25%;
+  margin-right: 25%;
+  // margin-top: 3.555%;
+  padding-top: 62px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.splash-background-div {
   font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  top: 110px;
+  left: 100%;
+  // width: 936px;
+  // max-width: 936px;
 }
 
 .splash-left {
-
+  display: inline-block;
+  max-width: 150px;
+  margin-right: 100px;
+  // justify-content: left;
 }
 
 .splash-left-image {
   border-radius: 50%;
   width: 150px;
-  position: relative;
+  // position: fixed;
   top: 63px;
   right: 115px;
 }
 
 .splash-right {
-  position: relative;
+  display: inline-block;
   top: 66px;
   right: 17px;
+  width:420px; /* or whatever width you want. */
+  max-width:420px; /* or whatever width you want. */
 }
 
 .splash-right-top-username {
