Work on viewing splash page photos

--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -20,7 +20,7 @@ header {
   font-family: 'Lobster', cursive;
 }
 
-.demo-login {
+.demo-login-button {
   position: absolute;
   padding: 9px 90px;
   padding-right: 88px;
