--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,6 +14,16 @@
     line: "<%= asset_path('grip-lines-vertical-solid.svg') %>",
     compass: "<%= asset_path('compass-regular.svg') %>",
     chuck: "<%= asset_path('CHUCK.jpg') %>",
+    upload: "<%= asset_path('upload-solid.svg') %>",
+    one: "<%= asset_path('1.jpg') %>",
+    two: "<%= asset_path('2.jpg') %>",
+    three: "<%= asset_path('3.jpg') %>",
+    four: "<%= asset_path('4.jpg') %>",
+    five: "<%= asset_path('5.jpg') %>",
+    nextPost: "<%= asset_path('arrow-circle-right-solid.svg') %>",
+    previousPost: "<%= asset_path('arrow-circle-left-solid.svg') %>",
+    nextImage: "<%= asset_path('arrow-right-solid.svg') %>",
+    previousImage: "<%= asset_path('arrow-left-solid.svg') %>",
   })
 </script>
 <main id="root"></main>
