--- a/app/assets/stylesheets/api/user.scss
+++ b/app/assets/stylesheets/api/user.scss
@@ -14,7 +14,7 @@
   margin-top: 2px
 }
 
-.signup-demo-login {
+.signup-demo-button {
   position: absolute;
   padding: 5px 84px;
   padding-right: 95px;
