--- a/app/assets/stylesheets/splash_page/splash.scss
+++ b/app/assets/stylesheets/splash_page/splash.scss
@@ -1,12 +1,18 @@
+.class-body {
+
+}
+
 .splash-body {
   display: flex;
   justify-content: center;
   margin-left: 25%;
   margin-right: 25%;
-  // margin-top: 3.555%;
+
   padding-top: 62px;
   padding-right: 20px;
   padding-left: 20px;
+
+  margin-bottom: 45px
 }
 
 .splash-background-div {
@@ -14,21 +20,17 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   top: 110px;
   left: 100%;
-  // width: 936px;
-  // max-width: 936px;
 }
 
 .splash-left {
   display: inline-block;
   max-width: 150px;
   margin-right: 100px;
-  // justify-content: left;
 }
 
 .splash-left-image {
   border-radius: 50%;
   width: 150px;
-  // position: fixed;
   top: 63px;
   right: 115px;
 }
@@ -55,6 +57,10 @@
   padding-left: 10px;
   padding-right: 10px;
   border: 1px solid lightgray;
+}
+
+.fa-upload {
+  // width: 16.5%
 }
 
 .splash-right-mid {
@@ -88,3 +94,4 @@
   position: relative;
   bottom: 12px;
 }
+
