Finish nights work

--- a/app/assets/stylesheets/post/posts.scss
+++ b/app/assets/stylesheets/post/posts.scss
@@ -1,14 +1,17 @@
 .posts-page{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap:30px;
-  margin-left: 372px;
-  margin-right: 372px;
-  padding-top: 50px;
-  border-top: 1px solid lightgray;
+  display: flex;
+  width: 71%;
 }
 
 .post-image-li {
+  border-top: 1px solid lightgray;
+  padding-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  margin-left: 30%;
+  margin-right: 30%;
+  width: 1000px
 }
 
 .post-image-link {
