--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,10 +14,10 @@
     line: "<%= asset_path('grip-lines-vertical-solid.svg') %>",
     compass: "<%= asset_path('compass-regular.svg') %>",
     upload: "<%= asset_path('upload-solid.svg') %>",
-    nextPost: "<%= asset_path('arrow-circle-right-solid.svg') %>",
-    previousPost: "<%= asset_path('arrow-circle-left-solid.svg') %>",
-    nextImage: "<%= asset_path('arrow-right-solid.svg') %>",
-    previousImage: "<%= asset_path('arrow-left-solid.svg') %>",
+    nextPost: "<%= asset_path('arrow-circle-right-solid.png') %>",
+    previousPost: "<%= asset_path('arrow-circle-left-solid.png') %>",
+    nextImage: "<%= asset_path('arrow-right-solid.png') %>",
+    previousImage: "<%= asset_path('arrow-left-solid.png') %>",
   })
 </script>
 <main id="root"></main>
