--- a/app/assets/stylesheets/post/posts.scss
+++ b/app/assets/stylesheets/post/posts.scss
@@ -17,11 +17,15 @@
 .post-image-link {
   width: 293px;
   height: 293px;
+  background: black;
 }
-
 
 .image-th {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.image-th:hover {
+  filter: opacity(.8)
 }
