--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -30,6 +30,10 @@ header {
   width: 25px;
 }
 
+.header-upload-image-c {
+  margin-bottom: 8px;
+}
+
 .header-vertical-line {
   font-size: 40px;
 }
