--- a/app/assets/stylesheets/post/show_post.scss
+++ b/app/assets/stylesheets/post/show_post.scss
@@ -8,8 +8,8 @@
   max-width: 600px;
   max-height: 600px;
   min-height: 450px;
-  width: 600px;
-  min-width: 480px;
+  // width: 600px;
+  // min-width: 480px;
   justify-items: center;
   align-content: center;
   align-items: center;
@@ -18,8 +18,8 @@
 
 .show-image {
   object-fit: contain;
+  min-width: 600px;
   max-width: 600px;
-  min-width: 480px;
   max-height: 600px;
 }
 
