--- a/app/assets/stylesheets/comment/comment.scss
+++ b/app/assets/stylesheets/comment/comment.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin-left: 20px;
   margin-top: 10px;
+  height: 300px;
   max-height: 300px;
   overflow: auto;
   margin-bottom: 5px;
@@ -38,4 +39,6 @@
 
 .child-comment {
   display: flex;
+  padding-left: 10px;
+  border-left: 1px solid #EFEFEF
 }
