Pre users refactor push

--- a/app/assets/stylesheets/comment/comment.scss
+++ b/app/assets/stylesheets/comment/comment.scss
@@ -42,3 +42,11 @@
   padding-left: 10px;
   border-left: 1px solid #EFEFEF
 }
+
+.hidden {
+  display: none;
+}
+
+.notHidden {
+  display: block;
+}
