--- a/app/assets/stylesheets/comment/comment.scss
+++ b/app/assets/stylesheets/comment/comment.scss
@@ -50,3 +50,10 @@
 .notHidden {
   display: block;
 }
+
+.comment-form {
+  margin-left: 10px;
+  width: 360px;
+  margin-top: 5px;
+  font-size: 14px;
+}
