--- a/app/assets/stylesheets/profile/profile.scss
+++ b/app/assets/stylesheets/profile/profile.scss
@@ -1,80 +1,118 @@
-.profile-body {
+.class-body {
+  align-items: stretch;
+  box-sizing: content-box;
   display: flex;
-  justify-content: center;
-  margin-left: 25%;
-  margin-right: 25%;
-  padding-top: 62px;
-  padding-right: 20px;
+  flex-direction: column;
+  flex-grow: 1;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 935px;
   padding-left: 20px;
-  margin-bottom: 45px
+  padding-right: 20px;
+  padding-top: 133px;
+  position: relative;
+}
+
+.profile-body {
+  align-items: stretch;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  min-height: 150;
+  margin-bottom: 44px;
+  position: relative;
 }
 
 .profile-background-div {
-  font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  top: 110px;
-  left: 100%;
+  // font-size: 15px;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  // top: 110px;
+  // left: 100%;
 }
 
 .profile-left {
-  display: inline-block;
-  max-width: 150px;
-  margin-right: 100px;
+  align-items: stretch;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  margin-right: 30px;
+  position: relative;
 }
 
 .profile-left-image {
   border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
   width: 150px;
-  top: 63px;
-  right: 115px;
 }
 
 .profile-right {
-  display: inline-block;
-  top: 66px;
-  right: 17px;
-  width:420px;
-  max-width:420px;
+  align-items: stretch;
+  box-sizing: border-box;
+  display: flex;
+  flex-basis: 30px;
+  flex-direction: column;
+  flex-grow: 3;
+  flex-shrink: 1;
+  height: 150;
+  line-height: 18px;
+  position: relative;
 }
 
 .profile-right-top-username {
-  font-size: 27px;
+  display: block;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 32px;
+  margin-bottom: -5px;
+  margin-top: 15px;
+  white-space: nowrap;
 }
 
 .profile-right-top-logout {
-  position: relative;
-  top: -30px;
-  right: -165px;
+  align-items: flex-start;
+  border: 1px solid #EFEFEF;
+  cursor: pointer;
+  display: block;
   font-size: 13px;
   font-weight: bold;
-  padding: 6px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border: 1px solid lightgray;
+  margin-left: 25px;
+  margin-top: 15px;
+  padding: 5px;
+  padding-left: 9px;
+  padding-right: 9px;
+  position: relative;
+}
+
+.profile-right-mid {
+  display: flex;
+  flex-direction: row;
+  line-height: 18px;
+  margin-bottom: 20px;
+  margin-block-end: 20px;
 }
 
 .profile-right-mid-posts {
-  position: relative;
-  bottom: 6px;
 }
 
 .profile-right-mid-followers {
-  position: relative;
-  bottom: 24px;
-  left: 112px;
+  margin-left: 25px;
 }
 
 .profile-right-mid-following {
-  position: relative;
-  bottom: 42px;
-  left: 250px;
+  margin-left: 25px;
 }
 
 .profile-right-bot-name {
-  position: relative;
+  align-items: stretch;
   bottom: 17px;
   font-size: 16px;
   font-weight: bold;
+  line-height: 24px;
 }
 
 .profile-right-bot-profile {
@@ -82,3 +120,12 @@
   bottom: 12px;
 }
 
+.profile-right-top {
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 1;
+  margin-bottom: 20px;
+  position: relative;
+}
