--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,6 +6,8 @@
 
 <% end %>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <script>
   window.images = ({
     camera: "<%= asset_path('camera-retro-solid.svg') %>",
