--- a/app/assets/stylesheets/profile/profile.scss
+++ b/app/assets/stylesheets/profile/profile.scss
@@ -69,6 +69,7 @@
 .profile-right-top-logout {
   align-items: flex-start;
   border: 1px solid #EFEFEF;
+  background-color: white;
   cursor: pointer;
   font-size: 13px;
   font-weight: bold;
