Finish likes part 1

--- a/app/assets/stylesheets/post/show_post.scss
+++ b/app/assets/stylesheets/post/show_post.scss
@@ -34,9 +34,9 @@
 .show-right-top {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid #EFEFEF;
-  margin-left: 20px;
-  margin-right: 20px;
+  border-bottom: 1pxx solid #EFEFEF;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-top: 20px;
 }
 
