--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -20,6 +20,8 @@
     previousPost: "<%= asset_path('arrow-circle-left-solid.png') %>",
     nextImage: "<%= asset_path('arrow-right-solid.png') %>",
     previousImage: "<%= asset_path('arrow-left-solid.png') %>",
+    liked: "<%= asset_path('heart-solid.svg') %>",
+    like: "<%= asset_path('heart-regular.svg') %>",
   })
 </script>
 <main id="root"></main>
