--- a/app/assets/stylesheets/comment/comment.scss
+++ b/app/assets/stylesheets/comment/comment.scss
@@ -1,17 +1,17 @@
 .show-right-mid-body {
   display: flex;
-  margin-left: 20px;
+  padding-left: 20px;
   margin-top: 10px;
-  height: 300px;
-  max-height: 300px;
+  height: 260px;
+  max-height: 260px;
   overflow: auto;
   margin-bottom: 5px;
-  border-bottom: 1px solid #EFEFEF;
+  // border-bottom: 1px solid #EFEFEF;
 }
 
 .show-right-bottom {
-  margin-left: 20px;
-  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   display: block;
 }
 
@@ -24,8 +24,8 @@
 
 .comment-body {
   font-size: 14px;
-  margin-bottom: 5px;
-  margin-right: 15px;
+  padding-bottom: 5px;
+  padding-right: 15px;
 }
 
 .comment-username {
@@ -51,7 +51,7 @@
 }
 
 .comment-form {
-  margin-left: 10px;
+  padding-left: 10px;
   width: 360px;
   margin-top: 5px;
   font-size: 14px;
